[update] h6 update delete

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h3>Hi Dane</h3>
     <h4>PM Team</h4>
     <h5>Great Team!</h5>
-    <h6>The End.123</h6>
+    <h6>The End.</h6>
 </body>
 </html>
